# Auto-green-background

./: .gitignore  README.en.md  README.md  package-lock.json  package.json  pyproject.toml  tauri_bridge.py
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
scripts/: benchmark_bridge.py  build-bridge.ps1  package-portable.ps1
src/: __init__.py  app.py  gui.py  processor.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: test_processor.py
web/: app.js  index.html
